[gd_scene load_steps=6 format=2]

[ext_resource path="res://game/levels/closed_door.gd" type="Script" id=1]
[ext_resource path="res://game/levels/level_0/tileset/door.png" type="Texture" id=2]
[ext_resource path="res://game/levels/level_0/tileset/interact_shape.tres" type="Shape2D" id=3]
[ext_resource path="res://game/levels/level_0/tileset/door_open_anim.tres" type="Animation" id=4]
[ext_resource path="res://game/levels/level_0/tileset/tile_shape.tres" type="Shape2D" id=5]

[node name="level_0_door" type="StaticBody2D" index="0" groups=[
"doors",
]]

input_pickable = false
collision_layer = 4
collision_mask = 15
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]

[node name="closed_door" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 16 )
_sections_unfolded = [ "Region" ]

[node name="interact_area" type="Area2D" parent="." index="1" groups=[
"doors",
]]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 4
collision_mask = 7
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="interact_shape" type="CollisionShape2D" parent="interact_area" index="0"]

shape = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/open_door = ExtResource( 4 )
blend_times = [  ]

[node name="door_collision" type="CollisionShape2D" parent="." index="3"]

shape = ExtResource( 5 )


